[package]
name = "rocket_launch_live"
version = "0.1.0"
edition = "2021"
description = "A type safe and asynchronous wrapper around the RocketLaunch.Live API."
license = "MIT OR Apache-2.0"
authors = ["Vasco Costa"]
repository = "https://github.com/vascocosta/rocket_launch_live/"
keywords = ["api", "rest", "client", "rocket", "launch", "space"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }